@@ -1,12 +1,16 @@
 package gym.crm.service;
 
+import gym.crm.dto.AddTrainingRequest;
 import gym.crm.dto.TrainingDto;
 import gym.crm.dto.TrainingMapper;
+import gym.crm.exception.EntityNotFoundException;
+import gym.crm.exception.ValidationException;
 import gym.crm.model.Trainee;
 import gym.crm.model.Trainer;
 import gym.crm.model.Training;
 import gym.crm.model.TrainingType;
 import gym.crm.model.TrainingTypeEntity;
+import gym.crm.repository.TraineeRepository;
 import gym.crm.repository.TrainerRepository;
 import gym.crm.repository.TrainingRepository;
 import org.junit.jupiter.api.Test;
@@ -20,6 +24,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -32,85 +37,95 @@ class TrainingServiceImplTest {
     private TrainingRepository trainingRepository;
     @Mock
     private TrainerRepository trainerRepository;
+    @Mock
+    private TraineeRepository traineeRepository;
     @Spy
     private TrainingMapper trainingMapper = Mappers.getMapper(TrainingMapper.class);
     @InjectMocks
     private TrainingServiceImpl service;
 
-    private TrainingDto trainingDto(int duration) {
-        return new TrainingDto(null, 2L, 1L, "Morning cardio",
-                1, TrainingType.CARDIO, LocalDate.of(2024, 1, 1), duration);
+    private AddTrainingRequest request(int duration) {
+        AddTrainingRequest r = new AddTrainingRequest();
+        r.setTraineeUsername("John.Doe");
+        r.setTrainerUsername("Ann.Lee");
+        r.setTrainingName("Morning cardio");
+        r.setTrainingDate(LocalDate.of(2024, 1, 1));
+        r.setTrainingDuration(duration);
+        return r;
     }
 
-    private Training training(int duration) {
+    private Trainer trainer() {
         Trainer trainer = new Trainer("Ann", "Lee", "Ann.Lee", "p", true,
                 new TrainingTypeEntity(1, TrainingType.CARDIO));
         trainer.setId(2L);
+        return trainer;
+    }
+
+    private Trainee trainee() {
         Trainee trainee = new Trainee("John", "Doe", "John.Doe", "p", true,
                 "addr", LocalDate.of(1990, 1, 1), Set.of(), Set.of());
         trainee.setId(1L);
-        return new Training(3L, trainer, trainee, "Morning cardio",
-                new TrainingTypeEntity(1, TrainingType.CARDIO), LocalDate.of(2024, 1, 1), duration);
+        return trainee;
+    }
+
+    private Training training() {
+        return new Training(3L, trainer(), trainee(), "Morning cardio",
+                new TrainingTypeEntity(1, TrainingType.CARDIO), LocalDate.of(2024, 1, 1), 30);
     }
 
     @Test
-    void createTrainingSavesWhenAuthenticatedAndValid() {
-        TrainingDto dto = trainingDto(60);
-        when(trainerRepository.credentialsMatch("Ann.Lee", "p")).thenReturn(true);
-        when(trainingRepository.save(any(Training.class))).thenAnswer(i -> i.getArgument(0));
+    void createTrainingResolvesByUsernameAndDerivesTypeFromTrainerSpecialization() {
+        Trainer trainer = trainer();
+        Trainee trainee = trainee();
+        when(trainerRepository.findByUsername("Ann.Lee")).thenReturn(Optional.of(trainer));
+        when(traineeRepository.findByUsername("John.Doe")).thenReturn(Optional.of(trainee));
 
-        TrainingDto result = service.createTraining(dto, "Ann.Lee", "p");
+        service.createTraining(request(60));
 
-        assertEquals("Morning cardio", result.getName());
-        assertEquals(2L, result.getTrainerId());
-        assertEquals(1L, result.getTraineeId());
         ArgumentCaptor<Training> captor = ArgumentCaptor.forClass(Training.class);
         verify(trainingRepository).save(captor.capture());
         Training saved = captor.getValue();
-        assertEquals(2L, saved.getTrainer().getId());
-        assertEquals(1L, saved.getTrainee().getId());
+        assertSame(trainer, saved.getTrainer());
+        assertSame(trainee, saved.getTrainee());
         assertEquals(TrainingType.CARDIO, saved.getTrainingType().getType());
-    }
-
-    @Test
-    void createTrainingFailsWhenTrainerAuthFails() {
-        TrainingDto dto = trainingDto(60);
-        when(trainerRepository.credentialsMatch("Ann.Lee", "bad")).thenReturn(false);
-
-        assertThrows(IllegalArgumentException.class, () -> service.createTraining(dto, "Ann.Lee", "bad"));
-        verify(trainingRepository, never()).save(any());
+        assertEquals("Morning cardio", saved.getName());
+        assertEquals(60, saved.getDuration());
+        assertEquals(LocalDate.of(2024, 1, 1), saved.getDate());
     }
 
     @Test
     void createTrainingRejectsNonPositiveDuration() {
-        TrainingDto dto = trainingDto(0);
-        when(trainerRepository.credentialsMatch("Ann.Lee", "p")).thenReturn(true);
-
-        assertThrows(IllegalArgumentException.class, () -> service.createTraining(dto, "Ann.Lee", "p"));
+        assertThrows(ValidationException.class, () -> service.createTraining(request(0)));
         verify(trainingRepository, never()).save(any());
     }
 
     @Test
-    void createTrainingRejectsMissingTrainer() {
-        TrainingDto dto = trainingDto(60);
-        dto.setTrainerId(null);
-        when(trainerRepository.credentialsMatch("Ann.Lee", "p")).thenReturn(true);
+    void createTrainingThrowsWhenTrainerMissing() {
+        when(trainerRepository.findByUsername("Ann.Lee")).thenReturn(Optional.empty());
 
-        assertThrows(NullPointerException.class, () -> service.createTraining(dto, "Ann.Lee", "p"));
+        assertThrows(EntityNotFoundException.class, () -> service.createTraining(request(60)));
         verify(trainingRepository, never()).save(any());
     }
 
     @Test
-    void getAllTrainingsDelegatesWhenAuthenticated() {
-        when(trainerRepository.credentialsMatch("Ann.Lee", "p")).thenReturn(true);
-        when(trainingRepository.findAllTrainings()).thenReturn(List.of(training(30)));
+    void createTrainingThrowsWhenTraineeMissing() {
+        when(trainerRepository.findByUsername("Ann.Lee")).thenReturn(Optional.of(trainer()));
+        when(traineeRepository.findByUsername("John.Doe")).thenReturn(Optional.empty());
 
-        List<TrainingDto> result = service.getAllTrainings("Ann.Lee", "p");
+        assertThrows(EntityNotFoundException.class, () -> service.createTraining(request(60)));
+        verify(trainingRepository, never()).save(any());
+    }
+
+    @Test
+    void getAllTrainingsDelegates() {
+        when(trainingRepository.findAllTrainings()).thenReturn(List.of(training()));
+
+        List<TrainingDto> result = service.getAllTrainings();
 
         assertEquals(1, result.size());
-        assertEquals(3L, result.get(0).getId());
-        assertEquals(2L, result.get(0).getTrainerId());
-        assertEquals(1L, result.get(0).getTraineeId());
-        assertEquals(TrainingType.CARDIO, result.get(0).getTrainingType());
+        assertEquals(3L, result.getFirst().getId());
+        assertEquals(2L, result.getFirst().getTrainerId());
+        assertEquals(1L, result.getFirst().getTraineeId());
+        assertEquals(TrainingType.CARDIO, result.getFirst().getTrainingType());
     }
 }
